fix: add mobile responsiveness to header and its gap. Also added hidden to overflow-x of body

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  /* html, */
+  body {
+    overflow-x: hidden;
+  }
+}
+
 @keyframes fromBottom {
   0% {
     opacity: 0;
